--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>Validate</title>
 
   <link rel="stylesheet" href="val.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+  <script src="jquery-3.6.1.min.js"></script>
 
 
 </head>
