--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Login Form</h1>
       <div class="content">
         <div class="input-field">
-          <input type="text" id="name" placeholder="Name" autocomplete="off" required>
+          <input type="text" id="name" placeholder="Name" autocomplete="off" required pattern="[A-Za-z ]+">
         </div>
         <p class="error" id="nameAlert"></p>
         <div class="input-field">
