--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="login-form">
-    <form action="" method="" id="frm">
+    <form action="javascript:alert( 'successfull!' );" method="" id="frm">
       <h1>Login Form</h1>
       <div class="content">
         <div class="input-field">
@@ -65,6 +65,7 @@
 
           $('#email-alert').html("Enter valid Email address Like example@example.com").show();;
         }
+
       });
     });
 
